--- a/09_EXPRESS/greetview/views/greet.ejs
+++ b/09_EXPRESS/greetview/views/greet.ejs
@@ -6,9 +6,9 @@
     <title>greet</title>
 </head>
 <body>
-        <% if(greet<12) { %>
+        <% if(nowHour<12) { %>
             <h1>Good Morning</h1>
-        <% } elif(greet<18) { %>
+        <% } elif(nowHour<18) { %>
             <h1>Good Afternoon</h1>
         <% } else { %>
             <h1>Good Evening</h1>
